fix(questionnaire): radio button alignment

--- a/packages/web/src/app/shared/user-questionnaire/user-questionnaire.component.scss
+++ b/packages/web/src/app/shared/user-questionnaire/user-questionnaire.component.scss
@@ -1,6 +1,9 @@
 form {
-  .buttons {
-    display: flex;
-    justify-content: end;
+  .e-btn {
+    float: right;
+  }
+
+  .e-radio:not(:last-child) {
+    margin-bottom: 0;
   }
 }
